# AICRA

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AICRA_Audit_Report.md  AICRA_Final_Result.md  CONTRIBUTING.md  DATA_LICENSE.md  Dockerfile  Makefile  README.md  USAGE.md  aicra_ransomware_streamlit_app.py  cli.py  docker-compose.yml  lint.yml  model_card.md  pyproject.toml  requirements-dev.txt  requirements-pinned.txt  requirements.txt  sample.csv  sonar-project.properties
.github/workflows/: ci.yml  lint.yml
aicra/: __init__.py  __main__.py  cli.py  config.py  mapping.py  register.py
aicra/core/: __init__.py  calibration.py  data.py  evaluation.py
aicra/models/: lightgbm.py
aicra/pipelines/: __init__.py  calibration.py  cost_optimization.py  data_loader.py  drift.py  drift_monitoring.py  evaluation.py  features_pe.py  full_debug.py  mapping.py  mitre_parser.py  model_card.py  policy.py  smoke.py  test_runner.py  training.py
aicra/utils/: __init__.py  download_ember.py  mitre_expander.py  normalize.py  policy_writer.py  save_results.py  schema_validator.py  train_lightgbm.py
artifacts/: lift_report.json  metrics.json  ops_report.json  policy.json  risk_register.csv  threshold.json
data/: impact.csv  sample.csv
data/ember/: README.md
data/ember2024/: README.md
data/lookups/: attack_to_d3fend.yaml  canonical_families.yaml  family_to_attack.yaml  risk_bucket_controls.yaml
data_governance/: LICENSE_NOTES.md  POLICY_SIGNING.md  schema.json
mappings/: attack_mapping.json  d3fend_graph.json  family_mapping.json
mlruns/0/: meta.yaml
mlruns/0/d207b6a011994fd58ded198dcd35fa62/: meta.yaml
mlruns/0/d207b6a011994fd58ded198dcd35fa62/params/: timestamp
mlruns/0/d207b6a011994fd58ded198dcd35fa62/tags/: mlflow.runName
mlruns/0/f6ba529952bc48fb8b069121f2767b82/: meta.yaml
mlruns/0/f6ba529952bc48fb8b069121f2767b82/metrics/: cost_fn  cost_fp  cost_ratio  min_cost  optimal_threshold
mlruns/0/f6ba529952bc48fb8b069121f2767b82/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
mlruns/983664053724069280/: meta.yaml
mlruns/983664053724069280/0fe401af3e984e349b56ff63f54cf5bc/: meta.yaml
mlruns/983664053724069280/0fe401af3e984e349b56ff63f54cf5bc/tags/: mlflow.runName
mlruns/983664053724069280/3321895bfd884197920502aa00e7121b/: meta.yaml
mlruns/983664053724069280/3321895bfd884197920502aa00e7121b/params/: git_commit
mlruns/983664053724069280/3321895bfd884197920502aa00e7121b/tags/: mlflow.runName
mlruns/983664053724069280/37f90c3069594f2ab3f518bbf592a210/: meta.yaml
mlruns/983664053724069280/37f90c3069594f2ab3f518bbf592a210/tags/: mlflow.runName
mlruns/983664053724069280/3bdca8c9ea3d480d99a54c04e042847e/: meta.yaml
mlruns/983664053724069280/3bdca8c9ea3d480d99a54c04e042847e/tags/: mlflow.runName
mlruns/983664053724069280/46bc34e30e8e41d2b7cf71e93db95e28/: meta.yaml
mlruns/983664053724069280/46bc34e30e8e41d2b7cf71e93db95e28/tags/: mlflow.runName
mlruns/983664053724069280/a546220c07e7499eb1abd210880ae5b7/: meta.yaml
mlruns/983664053724069280/ad31dbe37369472faf7881fc67bd5f38/: meta.yaml
mlruns/983664053724069280/ca530daf77a7496ab8e3df402949fd1c/: meta.yaml
notebooks/: 00_quickstart.ipynb  README.md
policies/: policy.json  policy_full.json  policy_small_ember.json
register/: cyber_risk_advisor_register.csv  cyber_risk_advisor_register.json  risk_register_small_ember.json  smoke_test_register.json
requirements/: base.in  dev.in  prod.in
results/: .gitkeep  versions_log.csv
results/run_2025-10-17_2156_test_archive/: metrics.json
schemas/: input_schema.json
src/: download_ember.py  evaluate.py  feature_extractor.py  log_ingest.py  policy_writer.py  train_ffnn.py
src/aicra/: __init__.py  calibration.py  config.py  data.py  evaluation.py  mapping.py  model.py  register.py
tests/: __init__.py  test_calibration.py  test_config.py  test_data.py  test_evaluation.py  test_features_pe.py  test_full_debug.py  test_mapping.py  test_mapping_scale.py  test_policy.py  test_real_data_requirements.py  test_schema.py  test_smoke.py
(+13 files in other folders)
